# tradewars-donner

./: .dockerignore  .gitignore  CLAUDE.md  CURRENT_TASK.md  Dockerfile  ENHANCE_PLAN.md  EVALUATE_REPORT.md  PLAN.md  README.md  challenge.ipynb  manage_users.py  pyproject.toml
backend/: auth.py  utils.py
backend/api/: app.py
backend/arena/: arena.py  config.json
backend/environment/: accounts.py  prices.py  tradewars.sqlite-shm  tradewars.sqlite-wal
backend/routers/: admin_routes.py  auth_routes.py
backend/test/: conftest.py  test_accounts.py  test_api.py  test_arena.py  test_arena_config.py  test_arena_integration.py  test_auth_routes.py  test_models.py  test_prices.py  test_tools.py  test_trader.py
backend/traders/: mcp_servers.py  models.py  native_probe.py  prototype.py  prototype_tools.py  reasoning_probe.py  templates.py  tools.py  trader.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: admin.ts  api.ts  apiClient.ts  auth.ts  chart.ts  heatmap.ts  log.ts  login.ts  main.ts  panel.ts  state.ts  styles.css  theme.ts  toast.ts  topbar.ts
frontend_dist/: index.html
frontend_dist/assets/: index-B9btFfC6.js  index-BZ7hjjJw.js  index-BaHBg8c9.css  index-CCuRKm5R.js  index-CD89zMAb.css  index-CZmuBUjx.js  index-CbJkr5TP.css  index-DCsT_FIR.css  index-DNfDKJB2.css  index-o1bFV6Sv.js  index-vIvM4yBB.js
scripts/: start.sh  start_mac.sh  status.sh  stop.sh  stop_mac.sh
