[project]
name = "tradewars"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "massive>=2.5.0",
    "openai>=2.32.0",
    "openai-agents>=0.14.5",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
testpaths = ["backend/test"]
pythonpath = ["."]
asyncio_mode = "auto"
