[project]
name = "tradewars"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "bcrypt>=4.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "litellm[google]>=1.83.0",
    "massive>=2.5.0",
    "openai>=2.32.0",
    "openai-agents[litellm]>=0.14.5",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.33.1",
    "slowapi>=0.1.9",
    "sse-starlette>=3.3.4",
    "sympy>=1.14.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/test"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests that spawn MCPs, hit live APIs, and take minutes to run. Opt-in via `pytest -m integration`.",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
]
